apps/treelink/base/media/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: treelink-media
  namespace: treelink
spec:
  selector:
    app: treelink-media
  ports:
    - name: http
      port: 3100
      targetPort: http
